# Man8S-oci

./: .gitignore  LICENSE  Makefile  README.md  config.json  pyproject.toml
man8lib/busybox-init/: application.sh  busybox-autoconfig-networking.sh  busybox-execute.sh  busybox-init.sh  yggdrasil-config-ipaddr.sh
man8lib/busybox-networking/: udhcpc-default.script
man8lib/nspawn-files/: network_isolated.nspawn
man8lib/utils/: man8shell.sh
man8utils/: man8lize-container.sh  man8pull-oci.sh  man8s-add-initsystem.sh  man8s-create-container.sh  man8s-create-distroless.sh  man8shell.sh
mbctl/: configure_nspawn_container_network.py  create_nspawn_container_from_oci_url.py  create_nspawn_file_by_oci_config.py  main.py  man8config.py  man8log.py  nspawn_ini_parser.py  pyproject.toml
mbctl-python-module/: pyproject.toml
mbctl-python-module/mbctl/: create_nspawn_container_from_oci_url.py  create_nspawn_file_by_oci_config.py  main.py  man8config.py
mbctl-python-module/mbctl/exec/: container_management.py  create_nspawn_container_from_oci_url.py  get_suffix_address_of_name.py  shell_into_nspawn_container.py
mbctl-python-module/mbctl/init_system/: configure_nspawn_container_network.py  man8s_add_initsystem.py
mbctl-python-module/mbctl/nspawn_config/: create_nspawn_file_by_oci_config.py  nspawn_ini_parser.py
mbctl-python-module/mbctl/utils/: man8config.py  shell.py
mbctl/exec/: create_nspawn_container_from_oci_url.py  get_suffix_address_of_name.py  shell_into_nspawn_container.py
mbctl/init_system/: man8s_add_initsystem.py
mbctl/resources/busybox-init/: busybox-init.sh
mbctl/utils/: resources.py  shell.py
src/mbctl/: main.py
src/mbctl/config_formats/: __init__.py  env_file_tools.py  man8s_config.py  nspawn_config.py  oci_config.py  oci_shallow_config_type.py  systemd_config.py
src/mbctl/config_generate/: README.md  __init__.py  generate_envs_from_configs.py  generate_nspawn_from_configs.py
src/mbctl/exec/: create_nspawn_container_from_oci_url.py  get_suffix_address_of_name.py  shell_into_nspawn_container.py
src/mbctl/get_bundle/: get_oci.py  get_oci_shallow_config.py  oci_convert.py
src/mbctl/init_system/: man8s_add_initsystem.py
src/mbctl/networking/: string_to_v6suffix.py  yggdrasil_addr.py
src/mbctl/nspawn_config/: create_nspawn_file_by_oci_config.py  nspawn_ini_parser.py
src/mbctl/resources/: __init__.py
src/mbctl/user_interaction/: must_input.py
src/mbctl/utils/: datetime_tools.py  file_operate.py  (+1 more)
systemd-configs/: 50-mbsrv0.netdev  50-mbsrv0.network  80-srvgrp0.netdev  krusl-ori-networkconfig.network
tests/: test_mbctl_create_container.py
(+6 files in other folders)
