[project]
name = "mbctl"
version = "0.2.1"
description = "Container tools for nspawn management"
authors = [
    { name = "Neboer", email = "rubinposter@gmail.com" }
]
dependencies = [
    "importlib_resources"
]

[tool.setuptools.package-data]
mbctl = ["resources/*"]

[project.scripts]
mbctl = "mbctl.main:main"