[project]
name = "mbctl"
version = "0.2.1"
description = "Container tools for nspawn management"
authors = [
    { name = "Neboer", email = "rubinposter@gmail.com" }
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*"]

[project.scripts]
mbctl = "mbctl.main:main"