[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbctl"
version = "0.2.1"
description = "System container orchestration tool for systemd-nspawn containers"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Neboer", email = "rubinposter@gmail.com" }
]
maintainers = [
    { name = "UntilSoftware", email = "UntilSoftware@mail.neboer.site" }
]

keywords = [
    "systemd-nspawn",
    "container",
    "orchestration",
    "linux",
    "system-tools",
    "cli"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

dependencies = [
]

[project.urls]
Homepage = "https://www.neboer.site"
Source = "https://github.com/Neboer/Man8S-oci"
Issues = "https://github.com/Neboer/Man8S-oci/issues"
Documentation = "https://www.neboer.site/docs/mbctl"

[project.scripts]
mbctl = "mbctl.main:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*"]
